--- a/package.json
+++ b/package.json
@@ -7,33 +7,23 @@
   "dependencies": {
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
-    "@firebase/component": "0.5.6",
     "@firebase/database": "0.12.0",
-    "@firebase/database-types": "0.9.0",
-    "@firebase/util": "1.3.0",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/pickers": "3.3.10",
-    "@material-ui/styles": "5.0.0-beta.5",
     "@material-ui/system": "4.12.1",
     "@material-ui/types": "5.1.0",
-    "@material-ui/utils": "4.11.2",
     "@mui/icons-material": "5.0.0-rc.0",
-    "@mui/material": "5.0.0-rc.0",
+    "@mui/material": "5.0.2",
     "firebase": "9.0.2",
-    "firebase-admin": "9.11.1",
-    "firebase-functions": "3.15.5",
     "history": "5.0.1",
-    "material-ui": "0.20.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-draggable": "4.4.4",
-    "react-firebase-hooks": "3.0.4",
     "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.1"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
     "typescript": "4.1.3"
   },
   "scripts": {
